fix: fix overflow and transition duration of burger menu

--- a/shelter/pages/main/style.css
+++ b/shelter/pages/main/style.css
@@ -144,6 +144,7 @@ h5 {
 }
 
 .not-only {
+  position: relative;
   background-image: url("../../assets/images/start-screen-background.jpg");
   background-size: 100%;
   background-repeat: no-repeat;
